@startuml
title "**职责链模式**"

class Client {
}

abstract class Handler {
  + setSuccessor(successor :Handler) :void
  + {abstract} handleRequest(request :int) :Object
}
note top: 定义一个处理请求的接口。

class ConcreteHandler1 {
  + handleRequest(request :int) :Object
}

class ConcreteHandler2 {
  + handleRequest(request :int) :Object
}

note "具体处理者类，处理它所负责的请求，\n可访问它的后继者，如果可处理该请求，\n就处理之，否则就将该请求转发给它的后继者。" as chn

ConcreteHandler1 .. chn
ConcreteHandler2 .. chn

Client -right-> Handler

Handler <|-- ConcreteHandler1
Handler <|-- ConcreteHandler2

ConcreteHandler2 "-successor" o--> Handler #blue;text:blue

footer D瓜哥 · https://www.diguage.com · 出品
@enduml
